WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226084
Accessibility caption styles does not always reflect the selection
https://bugs.webkit.org/show_bug.cgi?id=226084
Summary
Accessibility caption styles does not always reflect the selection
Per Arne Vollan
Reported
2021-05-21 07:51:03 PDT
This is caused by a race between pushing the caption preference value to the WebContent process and receiving the notification in that process.
Attachments
Patch
(10.32 KB, patch)
2021-05-21 08:01 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(10.30 KB, patch)
2021-05-21 10:41 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2021-05-21 07:51:21 PDT
<
rdar://75426845
>
Per Arne Vollan
Comment 2
2021-05-21 08:01:26 PDT
Created
attachment 429289
[details]
Patch
chris fleizach
Comment 3
2021-05-21 10:30:54 PDT
Comment on
attachment 429289
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=429289&action=review
> Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1107 > + return;
we probably don't need a return here. the other if blocks don't have it
Per Arne Vollan
Comment 4
2021-05-21 10:39:10 PDT
(In reply to chris fleizach from
comment #3
)
> Comment on
attachment 429289
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=429289&action=review
> > > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1107 > > + return; > > we probably don't need a return here. the other if blocks don't have it
Will fix. Thanks for reviewing!
Per Arne Vollan
Comment 5
2021-05-21 10:41:41 PDT
Created
attachment 429310
[details]
Patch
EWS
Comment 6
2021-05-21 12:04:47 PDT
Committed
r277874
(
238012@main
): <
https://commits.webkit.org/238012@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429310
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug